<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/instructions"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000"
            android:layout_margin="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>
        <CheckBox
            android:id="@+id/fargo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fargo"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>
        <CheckBox
            android:id="@+id/pulp_fiction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pulp Fiction"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>
        <CheckBox
            android:id="@+id/gone_girls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gone Girl"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>
        <CheckBox
            android:id="@+id/reservoir_dogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reservoir Dogs"
            android:textSize="16sp"
            android:layout_marginBottom="120dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000"
            android:layout_margin="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/question_2_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Answer in all lower case."
            android:textSize="16sp"
            android:textColor="#616161"
            android:inputType="text"
            android:layout_marginBottom="120dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000"
            android:layout_margin="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="True"
                android:textSize="16sp" />
            <RadioButton
                android:id="@+id/question_3_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="False"
                android:textSize="16sp" />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000"
            android:layout_margin="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thor: The Dark World"
                android:textSize="16sp" />
            <RadioButton
                android:id="@+id/question_4_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Iron Man 3"
                android:textSize="16sp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Captain America:The Winter Solider"
                android:textSize="16sp" />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000"
            android:layout_margin="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/question_5_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Use Numbers"
            android:layout_marginBottom="35dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="right"
            android:onClick="tallyScore"/>


    </LinearLayout>
</ScrollView>
